--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Movie App
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,28 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Movie App</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ul>
+      <!--<li *ngFor="let movie of movies">
+        <img src={{movie.Poster}} height="250" width="400">
+        <p>{{movie.Title}}</p>
+        <p>{{movie.Year}}</p>
+        </li>-->
+
+       
+      
+         <ion-card  *ngFor="let movie of movies">
+          <img src={{movie.Poster}} />
+          <ion-card-header>
+            <ion-card-title>{{movie.Title}}</ion-card-title>
+            <ion-card-subtitle>{{movie.Year}}</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+       
+      </ul>
+    </div>
 </ion-content>
